<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".DetailFragment">

    <TextView
        android:id="@+id/name_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:text="@string/name_detail"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/quantity_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_detail"
        android:layout_margin="15dp"
        android:text="@string/quantity_detail"
        android:textSize="24sp" />

    <Button
        android:id="@+id/delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/quantity_detail"
        android:text="@string/delete" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/ic_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"

        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"        android:src="@drawable/ic_edit" />

</RelativeLayout>