<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/item_name_label"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:endIconMode="clear_text"
        android:hint="@string/item_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/item_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textAutoComplete|textCapWords"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/item_quantity_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/item_name_label"
        android:layout_marginTop="16dp"
        app:endIconMode="clear_text"
        android:hint="@string/item_quantity">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/item_quantity"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="numberDecimal"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/save_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/item_quantity_label"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:text="@string/save_btn" />

</RelativeLayout>
